menu not behind section-title, fixed

--- a/Webpage/css/contact.css
+++ b/Webpage/css/contact.css
@@ -10,15 +10,15 @@ html {
 }
 
 .container {
-  background-color: #FAFAFA;
+  background-color: #fafafa;
   display: grid;
   max-height: 100%;
   max-width: 100%;
-  
+
   gap: 1.5rem;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto auto auto;
-  padding: 0rem 0.7rem 2rem;
+  padding: 2rem 0.7rem 2rem;
 }
 
 .contactPerson {
@@ -27,26 +27,26 @@ html {
   grid-template-columns: minmax(10ch, 70ch) fit-content(360px);
   grid-template-areas: "text img";
   gap: 0.8rem;
-  
+
   justify-self: end;
-  
+
   border-radius: 20px;
   box-shadow: 0.5rem 0.5rem 0.8rem -0.1rem;
-  
+
   padding: 1rem;
 }
 
 .text {
-  display:flex;
-  flex-direction:column;
+  display: flex;
+  flex-direction: column;
   grid-area: text;
 }
-.text h2{
+.text h2 {
   padding-bottom: 0.5rem;
 }
 .contactInfo {
- margin-top: auto;
- 
+  margin-top: auto;
+
   padding-top: 0.5rem;
   font-weight: 900;
   padding-left: 0.5rem;
